tests/sksl/errors/BinaryInvalidType.dsl.glsl
### Compilation failed:

error: expected a type, but found ';'
error: expected a type, but found '}'
error: type mismatch: '*' cannot operate on '<INVALID>', 'int'

error: type mismatch: '*' cannot operate on 'int', '<INVALID>'

error: type mismatch: '*' cannot operate on '<INVALID>', '<INVALID>'

5 errors
